// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/integrations/AbstractOutgoingOAuthConnection should match snapshot 1`] = `
<div
  className="backstage-content"
>
  <BackstageHeader>
    <Link
      to="/test/integrations/outgoing-oauth2-connections"
    >
      <MemoizedFormattedMessage
        defaultMessage="Outgoing OAuth Connections"
        id="add_outgoing_oauth_connection.header"
      />
    </Link>
    <MemoizedFormattedMessage
      defaultMessage="Header"
      id="Header"
    />
  </BackstageHeader>
  <div
    className="backstage-form"
  >
    <form
      className="form-horizontal"
    >
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="name"
        >
          <MemoizedFormattedMessage
            defaultMessage="Name"
            id="add_outgoing_oauth_connection.name.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="name"
            maxLength={64}
            onChange={[Function]}
            type="text"
            value="testConnection"
          />
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="Specify the name for your OAuth connection."
              id="add_outgoing_oauth_connection.name.help"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="client_id"
        >
          <MemoizedFormattedMessage
            defaultMessage="Client ID"
            id="add_outgoing_oauth_connection.client_id.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="client_id"
            maxLength={64}
            onChange={[Function]}
            type="text"
            value="clientid"
          />
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="Specify the Client ID for your OAuth connection."
              id="add_outgoing_oauth_connection.client_id.help"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="client_secret"
        >
          <MemoizedFormattedMessage
            defaultMessage="Client Secret"
            id="add_outgoing_oauth_connection.client_secret.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control disabled"
            disabled={true}
            id="client_secret"
            type="text"
            value="****************"
          />
          <span
            className="outgoing-oauth-connections-edit-secret"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "position": "absolute",
                "right": "16px",
                "top": "8px",
              }
            }
          >
            <i
              className="icon icon-pencil-outline"
            />
          </span>
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="Specify the Client Secret for your OAuth connection."
              id="add_outgoing_oauth_connection.client_secret.help"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="oauth_token_url"
        >
          <MemoizedFormattedMessage
            defaultMessage="OAuth Token URL"
            id="add_outgoing_oauth_connection.oauth_token_url.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="token_url"
            maxLength={64}
            onChange={[Function]}
            type="text"
            value="https://token.com"
          />
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="Specify the OAuth Token URL for your OAuth connection."
              id="add_outgoing_oauth_connection.oauth_token_url.help"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="audienceUrls"
        >
          <MemoizedFormattedMessage
            defaultMessage="Audience URLs (One Per Line)"
            id="add_outgoing_oauth_connection.audienceUrls.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <textarea
            className="form-control"
            id="audienceUrls"
            maxLength={1024}
            onChange={[Function]}
            rows={3}
            value="https://aud.com"
          />
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="The audience URIs which will receive requests with the OAuth token. Must be a valid URL and start with http:// or https://."
              id="add_outgoing_oauth_connection.audienceUrls.help"
            />
          </div>
        </div>
      </div>
      <div
        className="backstage-form__footer"
      >
        <FormError
          error={null}
          errors={
            Array [
              "",
              "",
            ]
          }
          type="backstage"
        />
        <Link
          className="btn btn-tertiary"
          to="/test/integrations/outgoing-oauth2-connections"
        >
          <MemoizedFormattedMessage
            defaultMessage="Cancel"
            id="add_outgoing_oauth_connection.cancel"
          />
        </Link>
        <Memo(SpinnerButton)
          className="btn btn-primary"
          id="saveOauthApp"
          onClick={[Function]}
          spinning={false}
          spinningText="Loading"
          type="submit"
        >
          <MemoizedFormattedMessage
            defaultMessage="Footer"
            id="Footer"
          />
        </Memo(SpinnerButton)>
        <div>
          renderExtra
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`components/integrations/AbstractOutgoingOAuthConnection should match snapshot, displays client error 1`] = `
<div
  className="backstage-content"
>
  <BackstageHeader>
    <Link
      to="/test/integrations/outgoing-oauth2-connections"
    >
      <MemoizedFormattedMessage
        defaultMessage="Outgoing OAuth Connections"
        id="add_outgoing_oauth_connection.header"
      />
    </Link>
    <MemoizedFormattedMessage
      defaultMessage="Header"
      id="Header"
    />
  </BackstageHeader>
  <div
    className="backstage-form"
  >
    <form
      className="form-horizontal"
    >
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="name"
        >
          <MemoizedFormattedMessage
            defaultMessage="Name"
            id="add_outgoing_oauth_connection.name.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="name"
            maxLength={64}
            onChange={[Function]}
            type="text"
            value="testConnection"
          />
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="Specify the name for your OAuth connection."
              id="add_outgoing_oauth_connection.name.help"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="client_id"
        >
          <MemoizedFormattedMessage
            defaultMessage="Client ID"
            id="add_outgoing_oauth_connection.client_id.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="client_id"
            maxLength={64}
            onChange={[Function]}
            type="text"
            value="clientid"
          />
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="Specify the Client ID for your OAuth connection."
              id="add_outgoing_oauth_connection.client_id.help"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="client_secret"
        >
          <MemoizedFormattedMessage
            defaultMessage="Client Secret"
            id="add_outgoing_oauth_connection.client_secret.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control disabled"
            disabled={true}
            id="client_secret"
            type="text"
            value="****************"
          />
          <span
            className="outgoing-oauth-connections-edit-secret"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "position": "absolute",
                "right": "16px",
                "top": "8px",
              }
            }
          >
            <i
              className="icon icon-pencil-outline"
            />
          </span>
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="Specify the Client Secret for your OAuth connection."
              id="add_outgoing_oauth_connection.client_secret.help"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="oauth_token_url"
        >
          <MemoizedFormattedMessage
            defaultMessage="OAuth Token URL"
            id="add_outgoing_oauth_connection.oauth_token_url.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="token_url"
            maxLength={64}
            onChange={[Function]}
            type="text"
            value="https://token.com"
          />
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="Specify the OAuth Token URL for your OAuth connection."
              id="add_outgoing_oauth_connection.oauth_token_url.help"
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="audienceUrls"
        >
          <MemoizedFormattedMessage
            defaultMessage="Audience URLs (One Per Line)"
            id="add_outgoing_oauth_connection.audienceUrls.label"
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <textarea
            className="form-control"
            id="audienceUrls"
            maxLength={1024}
            onChange={[Function]}
            rows={3}
            value=""
          />
          <div
            className="form__help"
          >
            <MemoizedFormattedMessage
              defaultMessage="The audience URIs which will receive requests with the OAuth token. Must be a valid URL and start with http:// or https://."
              id="add_outgoing_oauth_connection.audienceUrls.help"
            />
          </div>
        </div>
      </div>
      <div
        className="backstage-form__footer"
      >
        <FormError
          error={null}
          errors={
            Array [
              "serverError",
              <Memo(MemoizedFormattedMessage)
                defaultMessage="One or more audience URLs are required."
                id="add_outgoing_oauth_connection.audienceUrls.required"
              />,
            ]
          }
          type="backstage"
        />
        <Link
          className="btn btn-tertiary"
          to="/test/integrations/outgoing-oauth2-connections"
        >
          <MemoizedFormattedMessage
            defaultMessage="Cancel"
            id="add_outgoing_oauth_connection.cancel"
          />
        </Link>
        <Memo(SpinnerButton)
          className="btn btn-primary"
          id="saveOauthApp"
          onClick={[Function]}
          spinning={false}
          spinningText="Loading"
          type="submit"
        >
          <MemoizedFormattedMessage
            defaultMessage="Footer"
            id="Footer"
          />
        </Memo(SpinnerButton)>
        <div>
          renderExtra
        </div>
      </div>
    </form>
  </div>
</div>
`;
